@@ -763,9 +763,10 @@ sub caller
 #
 sub callers
 {
-    my $self = shift;
-    if (defined $_[0]) {
-	return $self->stack_entry($_[0])->{comp};
+    my ($self, $levels_back) = @_;
+    if (defined($levels_back)) {
+	my $entry = $self->stack_entry($levels_back);
+	return ( defined $entry ) ? $entry->{comp} : undef;
     } else {
 	return map($_->{comp}, reverse $self->stack);
     }
@@ -776,10 +777,12 @@ sub callers
 #
 sub caller_args
 {
-    my ($self,$index) = @_;
-    param_error "caller_args expects stack level as argument" unless defined $index;
+    my ($self, $levels_back) = @_;
+    param_error "caller_args expects stack level as argument" unless defined $levels_back;
 
-    my $args = $self->stack_entry($index)->{args};
+    my $entry = $self->stack_entry($levels_back);
+    return undef unless $entry;
+    my $args = $entry->{args};
     return wantarray ? @$args : { @$args };
 }
 
@@ -1601,7 +1604,8 @@ stack. e.g.
 
 When called in scalar context, a hash reference is returned.  When
 called in list context, a list of arguments (which may be assigned to
-a hash) is returned.
+a hash) is returned. Returns undef if the specified stack level does
+not exist.
 
 =for html <a name="item_callers"></a>
 
@@ -1618,6 +1622,8 @@ the component at the bottom of the stack. e.g.
     $m->callers(0)            # current component
     $m->callers(1)            # component that called us
     $m->callers(-1)           # first component executed
+
+Returns undef if the specified stack level does not exist.
 
 =for html <a name="item_caller"></a>
 
@@ -1874,7 +1880,7 @@ the buffer cannot be flushed.
 
 =item instance
 
-This class method returns the C<HTML::Mason:::Request> currently in
+This class method returns the C<HTML::Mason::Request> currently in
 use.  If called when no Mason request is active it will return
 C<undef>.
 
